add sheet and group for the page

--- a/odoo16_pratice/views/employee_views.xml
+++ b/odoo16_pratice/views/employee_views.xml
@@ -18,8 +18,14 @@
       <field name="model">employee.employee</field>
       <field name="arch" type="xml">
         <form>
-          <field name="name"/>
-          <field name="description"/>
+        <sheet>
+          <group>
+            <group>
+              <field name="name"/>
+              <field name="description"/>
+            </group>
+          </group>
+        </sheet>
         </form>
       </field>
     </record>
